=================
Changes for Crate
=================

Unreleased
==========

 - Removed ``OVER`` support from SQL parser because the clause was completely
   ignored when executing the query which led to misleading results.

 - Fix: Closing a connection via the Postgres Wire Protocol correctly closes the
   internal resources.

 - Added scalar function ``geohash`` that returns a GeoHash representation of
   a ``geo_point``

 - Added support for casting JSON strings to object columns.

 - Queries with ``_doc`` reference comparison (e.g. ``_doc['name'] = 'foo'``)
   in the ``WHERE`` clause return the correct results instead of empty result.

 - Fixed issue that led to casting exception when comparing an object column
   with an object literal that contains a string value.

 - Dynamically added string columns now have exactly the same characteristics
   as string columns created via ``CREATE TABLE`` or ``ALTER TABLE ADD COLUMN``

 - Fixed and issue that caused ``UPDATE`` statement on an empty partitioned
   table to throw UnsupportedOperationException.

 - The array comparison no longer requires extra parentheses for subselects.
   Now it's possible to use `` = ANY (SELECT ...)`` instead of
   `` = ANY ((SELECT ...))``

 - Fixed an issue that caused fulltext search with fuzziness='AUTO'
   to throw NumberFormatException.

 - DEPRECATED: multicast discovery has been depreciated in this release, and will be
   removed in the 1.1 release.
   Multicast discovery is disabled by default.

 - BREAKING: Serve admin ui from ``/``
   Admin UI is not accessible via ``_plugin/crate-admin`` anymore. Only via
   ``/admin`` or ``/``.

 - Fixed an issue in the ``LIKE`` predicate which prevented from using escaped
   backslash before the wildcard.

 - Updated crate-admin to ``1.1.0`` which includes the following change:

     - Improved console results table, including data type based colorization,
       alternating row colorization, structured object/array formatting,